--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "priscilla baah"
-author: "Blog Author"
+title: "<b> priscilla baah </b>"
+author: "Priscilla Baah"
 description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
 permalink: /:title/
 lang: "en"
